# Architectural_Drift_Detectpr

./: .gitignore  Cargo.toml  README.md  architecture.yaml
benches/: ast_benchmark.rs
fixtures/violation/src/ui/: HomePage.tsx
src/: ast_engine.rs  cache.rs  config.rs  error.rs  lib.rs  lsp.rs  main.rs  reporter.rs  validator.rs
src/templates/: report.html
